--- a/index.html
+++ b/index.html
@@ -11,26 +11,27 @@
 <body>
 
     <div id="loader">
-    <div class="loader-content">
-        <h1>SmartCalc</h1>
-        <p>By CodeNest</p>
+        <div class="loader-content">
+            <h1>SmartCalc</h1>
+            <p>By CodeNest</p>
+        </div>
     </div>
-</div>
 
     <div id="app-container" class="hidden">
         <div class="calculator">
             <div class="top-bar">
-    <span id="user-id-display">
-        <span id="user-id-text"></span>
-        <button id="copy-id-btn" class="icon-btn-small" title="نسخ المعرف"><i class="fas fa-copy"></i></button>
-    </span>
+                <span id="user-id-display">
+                    <span id="user-id-text"></span>
+                    <button id="copy-id-btn" class="icon-btn-small" title="نسخ المعرف"><i class="fas fa-copy"></i></button>
+                </span>
 
-    <div id="bmw-logo">BMW</div> <button id="menu-btn" class="icon-btn">
-        <span></span>
-        <span></span>
-        <span></span>
-    </button>
-</div>
+                <div id="bmw-logo">BMW</div> 
+                <button id="menu-btn" class="icon-btn">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+            </div>
             <div class="display">
                 <div class="history-display"></div>
                 <div class="main-display">0</div>
@@ -76,41 +77,48 @@
             </div>
         </div>
         <div id="popup-menu" class="hidden">
-            <button id="settings-btn"><i class="fas fa-cog"></i> <span>الإعدادات</span></button>
-            <button id="history-btn"><i class="fas fa-history"></i> <span>السجل</span></button>
-            <button id="sci-calc-toggle"><i class="fas fa-flask"></i> <span>حاسبة علمية</span></button>
+            <button id="settings-btn"><i class="fas fa-cog"></i> <span data-i18n="settings">الإعدادات</span></button>
+            <button id="history-btn"><i class="fas fa-history"></i> <span data-i18n="history">السجل</span></button>
+            <button id="sci-calc-toggle"><i class="fas fa-flask"></i> <span data-i18n="sci_calc">حاسبة علمية</span></button>
         </div>
     </div>
 
     <div id="settings-modal" class="modal-container hidden">
         <div class="modal-content">
             <button class="close-modal-btn">&times;</button>
-            <h2>الإعدادات</h2>
+            <h2 data-i18n="settings">الإعدادات</h2>
+
+            <!-- زر تغيير اللغة -->
             <div class="setting-item column">
-                <h3><i class="fas fa-palette"></i> الثيمات</h3>
+                <h3><i class="fas fa-language"></i> <span data-i18n="language">اللغة</span></h3>
+                <button id="lang-toggle-btn" class="settings-btn-full">English</button>
+            </div>
+
+            <div class="setting-item column">
+                <h3><i class="fas fa-palette"></i> <span data-i18n="themes">الثيمات</span></h3>
                 <div id="themes-container"></div>
             </div>
             <div class="setting-item column">
-                <h3><i class="fas fa-coins"></i> العملات</h3>
+                <h3><i class="fas fa-coins"></i> <span data-i18n="coins">العملات</span></h3>
                 <div class="wallet-display">
-                    <span>رصيدك:</span>
+                    <span data-i18n="your_balance">رصيدك:</span>
                     <span id="coin-balance">0 <i class="fas fa-coins"></i></span>
                 </div>
                 <div class="currency-prices">
-    <h4>أسعار العملات</h4>
-    <div class="price-package" data-amount="10" data-price="0.99">10 عملات = 0.99 USDT</div>
-    <div class="price-package" data-amount="20" data-price="1.79">20 عملة = 1.79 USDT</div>
-    <div class="price-package" data-amount="50" data-price="3.99">50 عملة = 3.99 USDT</div>
-    <div class="price-package" data-amount="200" data-price="14.99">200 عملة = 14.99 USDT</div>
-</div>
-                 <button id="add-coins-btn" class="settings-btn-full small-margin-top"><i class="fas fa-shield-alt"></i> لوحة التحكم (خاص)</button>
+                    <h4 data-i18n="currency_prices">أسعار العملات</h4>
+                    <div class="price-package" data-amount="10" data-price="0.99"><span class="price-amount">10</span> <span data-i18n="currency_unit">عملة</span> = <span class="price-usdt">0.99 USDT</span></div>
+<div class="price-package" data-amount="20" data-price="1.79"><span class="price-amount">20</span> <span data-i18n="currency_unit">عملة</span> = <span class="price-usdt">1.79 USDT</span></div>
+<div class="price-package" data-amount="50" data-price="3.99"><span class="price-amount">50</span> <span data-i18n="currency_unit">عملة</span> = <span class="price-usdt">3.99 USDT</span></div>
+<div class="price-package" data-amount="200" data-price="14.99"><span class="price-amount">200</span> <span data-i18n="currency_unit">عملة</span> = <span class="price-usdt">14.99 USDT</span></div>
+                </div>
+                <button id="add-coins-btn" class="settings-btn-full small-margin-top"><i class="fas fa-shield-alt"></i> <span data-i18n="admin_panel">لوحة التحكم (خاص)</span></button>
             </div>
             <hr>
-<div class="setting-item">
-    <button id="support-us-btn" class="settings-btn-full"><i class="fas fa-heart"></i> ادعمنا</button>
-</div>
             <div class="setting-item">
-                 <button id="privacy-policy-btn" class="settings-btn-full"><i class="fas fa-user-secret"></i> سياسة الخصوصية</button>
+                <button id="support-us-btn" class="settings-btn-full"><i class="fas fa-heart"></i> <span data-i18n="support_us">ادعمنا</span></button>
+            </div>
+            <div class="setting-item">
+                <button id="privacy-policy-btn" class="settings-btn-full"><i class="fas fa-user-secret"></i> <span data-i18n="privacy_policy">سياسة الخصوصية</span></button>
             </div>
         </div>
     </div>
@@ -118,9 +126,9 @@
     <div id="history-modal" class="modal-container hidden"></div>
     <div id="add-coins-modal" class="modal-container hidden"></div>
     <div id="privacy-policy-modal" class="modal-container hidden"></div>
-     <div id="support-us-modal" class="modal-container hidden"></div>
+    <div id="support-us-modal" class="modal-container hidden"></div>
     <div id="hamster"></div>
-     <div id="hamster-peeking"></div>
+    <div id="hamster-peeking"></div>
     <script src="script.js"></script>
 </body>
 </html>
